Finish spicy lime grilled shrimp recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
 
     </body>
 </html>
