--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Spicy Lime Grilled Shrimp</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F01%2FSpicy-Limed-Grill-Shrimp-2000.jpg" width="800">
+    <h4><em>Description</em></h4>
+    <p>Grilled shrimp is jazzed up with a little cajun seasoning and lime juice. </p>
+    <p>Ingredients</p>
+    <ul>
+        <li>3 tablespoons Cajun seasoning</li>
+        <li>1 lime, juiced</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 pound peeled and <strong>deveined</strong> medium shrimp</li>
+    </ul>
+
 </body>
 </html>
