Update index.html with unordered list and update shrimp recipe with cooking directions

--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -18,6 +18,18 @@
         <li>1 tablespoon vegetable oil</li>
         <li>1 pound peeled and <strong>deveined</strong> medium shrimp</li>
     </ul>
-
+    <h4><em>Directions</em></h4>
+    <ol>
+        <li>
+            <p>Mix together the Cajun seasoning, lime juice, and vegetable oil in a resealable plastic bag. Add the shrimp, coat with the marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for 20 minutes.</p>
+        </li>
+        <li>
+            <p>Preheat an outdoor grill for medium heat, and lightly oil the grate. Remove the shrimp from the marinade, and shake off excess. Discard the remaining marinade.</p>
+        </li>
+        <li>
+            <p>Cook the shrimp on the preheated grill until they are bright pink on the outside and the meat is no longer transparent in the center, about 2 minutes per side.</p>
+        </li>
+    </ol>
+<a href="../index.html"><h5>Back to homepage</h5></a>
 </body>
 </html>
