--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
+        <ul>
+            <li>
+                <a href="./recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
+            </li>
+            <li>
+                <a href="">More recipes</a>
+            </li>
+        </ul>
+        
 
     </body>
 </html>
+
