--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>odin-recipes</title>
+        <link rel="stylesheet" href="styles.css" 
 
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="mainpage">
             <li>
                 <a href="./recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
             </li>
             <li>
-                <a href="">More recipes</a>
+                <a href="./recipes/spicy-lime-grilled-shrimp.html">More recipes</a>
             </li>
         </ul>
         
