--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -7,7 +7,7 @@
     <title>Spicy Lime Grilled Shrimp</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body width= "device-width">
     <h1>Spicy Lime Grilled Shrimp</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F05%2F01%2FSpicy-Limed-Grill-Shrimp-2000.jpg">
     <h4><em>Description</em></h4>
